fixed uneven blocks bug

--- a/src/boggle.css
+++ b/src/boggle.css
@@ -26,17 +26,18 @@ p, ul, p {
   float: left;
 }
 .Block-inner {
-  transform: translate(8px, -3px);
 }
-
-.u-rotate-90 {
-  transform: rotate(90deg);
+.Block--rot0 .Block-inner {
+  transform: rotate(0deg) translate(8px, -3px);
 }
-.u-rotate-180 {
-  transform: rotate(180deg);
+.Block--rot90 .Block-inner {
+  transform: rotate(90deg) translate(8px, -3px);
 }
-.u-rotate-270 {
-  transform: rotate(270deg);
+.Block--rot180 .Block-inner {
+  transform: rotate(180deg) translate(8px, -3px);
+}
+.Block--rot270 .Block-inner {
+  transform: rotate(270deg) translate(8px, -3px);
 }
 
 .LetterGrid {
